2008-07-31  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/videotestsrc/gstvideotestsrc.c: (gst_video_test_src_getcaps),
	(gst_video_test_src_create):
	Discard buffers of the wrong size after renegotiation, this is perfectly
	possible with things like capsfilter that could suggest caps changes
	upstream without knowing the size of the buffer.

2008-07-31  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/icles/.cvsignore:
	* tests/icles/Makefile.am:
	* tests/icles/test-scale.c: (make_pipeline), (main):
	Add dynamic rescaling tests for the new basetransform.

2008-07-30  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/audioconvert/Makefile.am:
	  Dist recently-added gstfastrandom.h.

2008-07-30  Edward Hervey  <edward.hervey@collabora.co.uk>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_get_xv_support):
	Fix a "may be used uninitialized in this function" which weirdly only
	appears on macosx (?).

2008-07-30  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/riff/riff-ids.h:
	  Adding acid chunk for tempo and loop information.

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* sys/xvimage/Makefile.am:
	  floor() needs linking to $(LIBM).

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* ext/gnomevfs/gstgnomevfssrc.c:
	  Aggregate short reads and add some comments and debug logging.
	  Fixes #537380

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* gst/playback/gstplaybasebin.c:
	  Fix property doc markup (its not a signal).

	* sys/xvimage/xvimagesink.c:
	  Add since tag for new proeprties (also add sice tags fro the last two
	  other additions).

2008-07-29  Stefan Kost  <ensonic@users.sf.net>

	* sys/xvimage/xvimagesink.c:
	* sys/xvimage/xvimagesink.h:
	  Add autofill/colorkey properties. Fixes #538656.

2008-07-28  David Schleef  <ds@schleef.org>

	* sys/xvimage/xvimagesink.c:
	  Fix rounding errors when converting colorbalance values
	  between hardware and object property ranges.  Partial